# AntaresLegacyModels-to-GEMS-Converter

./: .gitignore  AGENTS.md  AUTHORS.txt  CHANGELOG-antares_legacy_models_library.md  CLAUDE.md  COMPATIBILITY.md  README.md  add_tsv_params.py  compare_mps.py  convert_bc.py  convert_nuclear.py  debug_conversion_output.txt  dependencies.json  mypy.ini  parallel_run_bp25.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  tmp_inspect_binding_constraints.py  tmp_inspect_p2g_legacy.py  tmp_test_delete_binding.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: a2g-01.yml  a2g-02.yml  a2g-03.yml  a2g-04.yml  antares-craft-update.yml  antares-update.yml  gemspy-update.yml
.github/workflows/: check-antares-craft-update.yml  check-antares-update.yml  check-gemspy-update.yml  ci.yml  notify-gems-antares-legacy-models-update.yml  publish.yml  run-tests.yml  update-library-checksums.yml
scripts/: RHS_bindingconstraints_VE.py  RHS_p2g_min_load.py  process_dsr_files.py  reorder_series_files.py  run_relgap.py  synthesize_hybrid_values.py  zero_series_values.py
src/antares_gems_converter/: __init__.py
src/antares_gems_converter/catalogs/: antares_legacy_area_catalog.yml  antares_legacy_link_catalog.yml  antares_legacy_short_term_storage.yml  antares_legacy_short_term_storage_catalog.yml  antares_legacy_thermal_cluster_catalog.yml
src/antares_gems_converter/input_converter/src/: config.py  converter.py  main.py  parsing.py  utils.py
src/antares_gems_converter/libs/antares_historic/: CHANGELOG-antares_legacy_models_library.md  antares_historic.yml  antares_legacy_models.yml  antares_legacy_models.yml.sha256
src/antares_gems_converter/libs/reference_models/: andromede_v1_models.yml  andromede_v1_models.yml.sha256
src/antares_gems_converter/taxonomies/: antares_legacy_taxonomy.yml
src/antares_runner/: __init__.py  antares_runner.py
tests/: __init__.py
tests/antares_historic/: antares_version.py  conftest.py  test_antares_historic.py  test_catalogs.py  test_hydro.py  test_link_model.py  test_misc_gen.py  test_model_taxonomy.py  test_sts_model.py  test_thermal_model.py  utils.py
tests/antares_historic/antares-resources/reference_libraries/: antares_legacy_models.yml
tests/antares_historic/data/: constant_load.txt
tests/input_converter/: conftest.py  test_converter.py  test_converter_modeler_scenariobuilder.py  test_thermal_prepro.py
tests/input_converter/resources/mini_test_BP_conversion/: antares_legacy_models.yml  reference.yaml
versions/: antares-craft.txt  antares_legacy_models_library.txt  converter.txt  gemspy.txt
(+28 files in other folders)
