[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "antares-legacy-gems-converter"
version = "0.1.0"
description = "Convert Antares Legacy studies to GEMS format"
license = {text = "MPL-2.0"}
requires-python = ">=3.10"
dependencies = [
    "gemspy==0.1.0",
    "numpy",
    "PyYAML>=6.0",
    "pydantic",
    "antares_craft==0.3.0",
    "pandas",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "mypy",
    "types-pyyaml",
    "black~=23.7.0",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
