[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "antares-legacy-gems-converter"
version = "0.1.0"
description = "Convert Antares Legacy studies to GEMS format"
license = {text = "MPL-2.0"}
requires-python = ">=3.10"
dependencies = [
    "gemspy==0.1.0",
    "antares_craft==0.3.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pydantic==2.11.10",
    "PyYAML==6.0.3",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "mypy==2.1.0",
    "types-pyyaml==6.0.12",
    "black==23.7.0",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
