[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "antares-legacy-gems-converter"
version = "0.2.0"
description = "Convert Antares Legacy studies to GEMS format"
license = {text = "MPL-2.0"}
requires-python = ">=3.11"
dependencies = [
    "antares_craft==0.14.0",
    "antares-study-version==1.0.20",
    "antares-timeseries-generation==0.1.9",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pydantic>=2.11.10",
    "gemspy==0.1.2",
    "PyYAML>=6.0.3",
]

[project.scripts]
antares-to-gems = "antares_gems_converter.input_converter.src.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "mypy>=2.1.0",
    "types-pyyaml>=6.0.12",
    "black>=23.7.0",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
